Added Menu Editor to System Settings.  Made window centered on start.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public1ubuntu1) precise; urgency=low
+
+  * 
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 01 Jul 2012 08:55:40 -0400
+
 menulibre (0.1-public1) precise; urgency=low
 
   * Initial release.
