--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public3) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 02 Jul 2012 23:27:26 -0400
+
 menulibre (0.1-public2) precise; urgency=low
 
   * New release.
