--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public3ubuntu1) precise; urgency=low
+
+  * 
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 10:14:18 -0400
+
 menulibre (0.1-public3) precise; urgency=low
 
   * New release.
