--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public4ubuntu1) precise; urgency=low
+
+  * 
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 13:27:43 -0400
+
 menulibre (0.1-public4) precise; urgency=low
 
   * New release.
