Removed stock icon selection since stock icons are not available in launcher items.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public5) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 13:36:38 -0400
+
 menulibre (0.1-public4ubuntu1) precise; urgency=low
 
   * 
