Fixed missing icons in search.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public6) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 09:48:28 -0400
+
 menulibre (0.1-public5) precise; urgency=low
 
   * New release.
