--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+menulibre (0.1-public8) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 16:16:42 -0400
+
+menulibre (0.1-public7) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 14:33:37 -0400
+
 menulibre (0.1-public6) precise; urgency=low
 
   * New release.
