--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (0.1-public9) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Thu, 05 Jul 2012 11:13:05 -0400
+
 menulibre (0.1-public8) precise; urgency=low
 
   * New release.
