--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+menulibre (12.07.4) precise; urgency=low
+
+  * Added menus and launchpad integration back to the program.  Removed
+    statusbar.
+  * Breadcrumbs cannot be disabled when their view is active.
+  * Search box now searches by name, generic name, comment, and
+    executable.
+  * Fixed cursor selecting all in search when backspacing.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Fri, 06 Jul 2012 13:20:36 -0400
+
 menulibre (12.07.3) precise; urgency=low
 
   * Testing cleanup.
