--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.07.8) precise; urgency=low
+
+  * Fix for Lubuntu where settings have not been changed.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sat, 07 Jul 2012 10:28:42 -0400
+
 menulibre (12.07.7) precise; urgency=low
 
   * Fixed always visible HScrollbar in Non-Overlay scrollbar
