--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+menulibre (12.07.9) precise; urgency=low
+
+  * Added new shortcut keys to help.
+  * Added Ctrl-Tab and Ctrl-Shift-Tab navigation.
+  * Added Ctrl-Tab and Ctrl-Shift-Tab navigation.
+  * Fixed loading of previous app when searching and press enter.
+  * Fixed loading of previous app when searching and press enter.
+  * Added usability tweaks to icon selection.
+  * Added usability tweaks to icon selection.
+  * Additional categories are now preserved.
+  * Finished Search All functionality.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 08 Jul 2012 09:50:46 -0400
+
 menulibre (12.07.8) precise; urgency=low
 
   * Fix for Lubuntu where settings have not been changed.
