Added changes from ~dholbach of the ARB.  Added changed information to setup.py.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,219 +1,5 @@
 menulibre (12.07.11) precise; urgency=low
 
-  * Finished integrating all expected features.
-  * Added delete button for entries.
+  * Initial version.
 
  -- Sean Davis <smd.seandavis@gmail.com>  Sun, 08 Jul 2012 22:31:00 -0400
-
-menulibre (12.07.9ubuntu1) precise; urgency=low
-
-  * 
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 08 Jul 2012 14:48:01 -0400
-
-menulibre (12.07.9) precise; urgency=low
-
-  * Added new shortcut keys to help.
-  * Added Ctrl-Tab and Ctrl-Shift-Tab navigation.
-  * Added Ctrl-Tab and Ctrl-Shift-Tab navigation.
-  * Fixed loading of previous app when searching and press enter.
-  * Fixed loading of previous app when searching and press enter.
-  * Added usability tweaks to icon selection.
-  * Added usability tweaks to icon selection.
-  * Additional categories are now preserved.
-  * Finished Search All functionality.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 08 Jul 2012 11:25:54 -0400
-
-menulibre (12.07.8) precise; urgency=low
-
-  * Fix for Lubuntu where settings have not been changed.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sat, 07 Jul 2012 10:28:42 -0400
-
-menulibre (12.07.7) precise; urgency=low
-
-  * Fixed always visible HScrollbar in Non-Overlay scrollbar
-    environments.
-  * Added proper Lubuntu support.  Remove View menu item.
-  * Added support for Lubuntu theming.
-  * Added support for Lubuntu theming.
-  * Added support for Lubuntu theming.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sat, 07 Jul 2012 09:25:03 -0400
-
-menulibre (12.07.6ubuntu1) precise; urgency=low
-
-  * 
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sat, 07 Jul 2012 09:16:37 -0400
-
-menulibre (12.07.6) precise; urgency=low
-
-  * Fixed application caching when creating new launchers and editing
-    launchers.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 06 Jul 2012 23:14:35 -0400
-
-menulibre (12.07.5) precise; urgency=low
-
-  * Finished the application help menus.
-  * Finished the application help menus.
-  * Added Editing a Launcher Basic help page.
-  * Added Editing a Launcher Basic help page.
-  * Beginning creation of help pages.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 06 Jul 2012 16:53:05 -0400
-
-menulibre (12.07.4) precise; urgency=low
-
-  * Added menus and launchpad integration back to the program.  Removed
-    statusbar.
-  * Breadcrumbs cannot be disabled when their view is active.
-  * Search box now searches by name, generic name, comment, and
-    executable.
-  * Fixed cursor selecting all in search when backspacing.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 06 Jul 2012 13:20:36 -0400
-
-menulibre (12.07.3) precise; urgency=low
-
-  * Testing cleanup.
-  * Fully implemented on-hover for iconview.
-  * Added hover to iconselections.
-  * Added hover to iconselections.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 06 Jul 2012 07:14:51 -0400
-
-menulibre (12.07.2) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 05 Jul 2012 20:08:31 -0400
-
-menulibre (12.07.1) precise; urgency=low
-
-  * Finished commenting everything.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 05 Jul 2012 18:02:59 -0400
-
-menulibre (12.07) precise; urgency=low
-
-  * Added enhanced breadcrumb keyboard navigation.
-  * Fixed amperstand issue with search results.
-  * Added docstrings for Application and IconTheme classes.
-  * Added italics to hidden menu items.
-  * Fixed missing icons in search.
-  * Added IconView resizing.
-  * Removed stock icon selection since stock icons are not available in
-    launcher items.
-  * Further cleanup
-  * Fix for UnboundLocalError in quicklists.
-  * Beginning cleanup and commenting.
-  * Added accelerators for save, undo, redo, search, and home.
-  * Fix for added quicklists when there are none.
-  * MenuLibre now works fully with sudo powers.
-  * New Applications now work.
-  * Updated TODO
-  * Fixed All Applications, hiding WINE, saving without local app
-    directory.
-  * Changes?
-  * Everything but statusbar and new launchers.
-  * MenuLibre no longer shows system/user duplicates.
-  * Quicklists are now fully supported.
-  * All settings, categories, and quicklists are now properly loaded.
-  * Add Launcher mostly implemented.
-  * Fixed search results icon.
-  * Fixed search results loading problem.
-  * Fixed loading new app should go to new page.
-  * Added Menu Editor to System Settings.  Made window centered on
-    start.
-  * Creating ubuntu package
-  * Updated interface, most items now work.  Still some known bugs, see
-    file BUGS.
-  * Creating ubuntu package
-  * Much improved IconTheme class.
-  * Added missing files.
-  * Added missing files.
-  * All actions are now undo-able.
-  * Change tracking.
-  * Change tracking.
-  * Instant Search
-  * Initial Category view implementation.
-  * Initial Category view implementation.
-  * Fixed icon/pixbuf grabber.
-  * Initial interface and application viewer functionaility.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 05 Jul 2012 16:39:48 -0400
-
-menulibre (0.1-public9) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 05 Jul 2012 11:13:05 -0400
-
-menulibre (0.1-public8) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 16:16:42 -0400
-
-menulibre (0.1-public7) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 14:33:37 -0400
-
-menulibre (0.1-public6) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 04 Jul 2012 09:48:28 -0400
-
-menulibre (0.1-public5) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 13:36:38 -0400
-
-menulibre (0.1-public4ubuntu1) precise; urgency=low
-
-  * 
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 13:27:43 -0400
-
-menulibre (0.1-public4) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 11:52:07 -0400
-
-menulibre (0.1-public3ubuntu1) precise; urgency=low
-
-  * 
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 03 Jul 2012 10:14:18 -0400
-
-menulibre (0.1-public3) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Mon, 02 Jul 2012 23:27:26 -0400
-
-menulibre (0.1-public2) precise; urgency=low
-
-  * New release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Mon, 02 Jul 2012 17:07:03 -0400
-
-menulibre (0.1-public1ubuntu1) precise; urgency=low
-
-  * 
-
- -- Sean Davis <smd.seandavis@gmail.com>  Mon, 02 Jul 2012 05:31:32 -0400
-
-menulibre (0.1-public1) precise; urgency=low
-
-  * Initial release.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 29 Jun 2012 12:08:20 -0400
