--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ menulibre (12.07.11) precise; urgency=low
 
   * Initial version.
 
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 08 Jul 2012 22:31:00 -0400
+ -- Sean Davis <sean@sean-Latitude-E6400>  Wed, 01 Aug 2012 13:00:58 -0400
