--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.08.7) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 06 Aug 2012 15:49:09 -0400
+
 menulibre (12.08.6) precise; urgency=low
 
   * Added Spanish translation.
