--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.08.9) precise; urgency=low
+
+  * Fix for IconTheme bug #1037283
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Thu, 16 Aug 2012 14:19:21 -0400
+
 menulibre (12.08.8) precise; urgency=low
 
   * Fix for IconTheme bug #1037283
