Added more safeguards to IconTheme, added Exception handler.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ menulibre (12.08.9) precise; urgency=low
 
   * Fix for IconTheme bug #1037283
 
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 16 Aug 2012 14:19:21 -0400
+ -- Sean Davis <sean@sean-Latitude-E6400>  Tue, 21 Aug 2012 12:09:13 -0400
 
 menulibre (12.08.8) precise; urgency=low
 
