--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.08.10) precise; urgency=low
+
+  * Added more safeguards to IconTheme, added Exception handler.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 21 Aug 2012 21:37:27 -0400
+
 menulibre (12.08.9) precise; urgency=low
 
   * Fix for IconTheme bug #1037283
