--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (12.10.1) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 24 Oct 2012 07:37:59 -0400
+
 menulibre (12.10ubuntu1) UNRELEASED; urgency=low
 
   * Pre-upgrade checkpoint
